--- a/src/app/pages/tracking-order/tracking-order.component.html
+++ b/src/app/pages/tracking-order/tracking-order.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" disabled="true">
   <h4 class="text-center mb-2">Tracking Order</h4>
   <h6 class="orderid text-center">Order: #98089899</h6>
   <ul class="progressbar mb-5">
