--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-
+<quick-view [quickviewed]="quickviewed"></quick-view>
 <!--Showcase-->
 <div class="container aguri-showcase mbt-120">
     <div class="row">
@@ -374,50 +374,6 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
-  </div>
-</div>
-
-<!--Modal Quick view-->
-<div class="container">
-  <div class="modal fade" id="quickview">
-    <div class="modal-dialog modal-dialog-centered quickview">
-      <div class="modal-content" *ngIf="quickviewed">
-        <div class="row">
-          <div class="col-7 ps-0">
-            <img src="{{quickviewed.thumb}}">
-          </div>
-          <div class="col-5 pe-0">
-            <h5>{{quickviewed.name}}</h5>
-            <h5 class="my-3">{{quickviewed.price | currency:'USD'}}</h5>
-            <form ngNativeValidate onsubmit="alert('The product was successfully added to bag!!')">
-              <div class="d-flex">
-                <p class="mdt me-auto">Quantity</p>
-                <span class="buttons_added ml-1 qty-box">
-                 <input aria-label="quantity" class="input-qty text-center" max="100" min="1" name="" type="number" value="" required>
-               </span>
-              </div>
-              <div class="line"></div>
-              <div class="quick-size my-3">
-                <select class="form-select smt" required>
-                  <option value="">Select size</option>
-                  <option value="1">3</option>
-                  <option value="2">3 1/2</option>
-                  <option value="3">4</option>
-                  <option value="4">4 1/2</option>
-                  <option value="5">5</option>
-                  <option value="6">5 1/2</option>
-                  <option value="7">-</option>
-                </select>
-              </div>
-              <input type="submit" class="btn btn-pri my-3 w-100" value="Add to bag" data-bs-dismiss="modal">
-            </form>
-            <p class="mt-2">View more detail <a routerLink="/product-detail/{{quickviewed.pid}}" data-bs-dismiss="modal">
-              <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
-            </a></p>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
 </div>
 
