--- a/src/app/pages/quickview/quickview.component.html
+++ b/src/app/pages/quickview/quickview.component.html
@@ -32,7 +32,7 @@
                   </select>
                 </div>
               </div>
-              <input type="submit" class="btn btn-pri my-3" value="Add to bag">
+              <input type="submit" class="btn btn-pri my-3 w-100" value="Add to bag">
             </form>
             <p class="mt-2">View more detail <a routerLink="/product-detail/{{quickviewed.pid}}" data-bs-dismiss="modal">
               <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
