--- a/src/app/pages/sub-category/sub-category.component.html
+++ b/src/app/pages/sub-category/sub-category.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="load;else subcate">
   <div class="loader"></div>
 </div>
+<quick-view [quickviewed]="quickviewed"></quick-view>
 <ng-template #subcate>
   <!--sub-category-top-->
   <div class="category-top row pb-5">
@@ -180,51 +181,6 @@
           </div>
         </div>
 
-        <!--Modal Quick view-->
-        <div class="container">
-          <div class="modal fade" id="quickview">
-            <div class="modal-dialog modal-dialog-centered quickview">
-              <div class="modal-content" *ngIf="quickviewed">
-                <div class="row">
-                  <div class="col-7 ps-0">
-                    <img src="{{quickviewed.thumb}}">
-                  </div>
-                  <div class="col-5 pe-0">
-                    <h5>{{quickviewed.name}}</h5>
-                    <h5 class="my-3">{{quickviewed.price | currency:'USD'}}</h5>
-                    <form ngNativeValidate onsubmit="alert('The product was successfully added to bag!!')">
-                      <div class="d-flex">
-                        <p class="mdt me-auto">Quantity</p>
-                        <span class="buttons_added ml-1 qty-box">
-                 <input aria-label="quantity" class="text-center" max="100" min="1" name="" type="number" value="" required>
-               </span>
-                      </div>
-                      <div  class="line"></div>
-                      <div>
-                        <div class="quick-size my-3">
-                          <select class="form-select smt" required>
-                            <option value="">Select size</option>
-                            <option value="1">3</option>
-                            <option value="2">3 1/2</option>
-                            <option value="3">4</option>
-                            <option value="4">4 1/2</option>
-                            <option value="5">5</option>
-                            <option value="6">5 1/2</option>
-                            <option value="7">-</option>
-                          </select>
-                        </div>
-                      </div>
-                      <input type="submit" class="btn btn-pri my-3" value="Add to bag">
-                    </form>
-                    <p class="mt-2">View more detail <a routerLink="/product-detail/{{quickviewed.pid}}" data-bs-dismiss="modal">
-                      <i class="fa fa-chevron-circle-right" aria-hidden="true"></i>
-                    </a></p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
 
         <!--category-bottom-->
         <div class="category-bottom text-center">
