--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -65,6 +65,16 @@
   padding-top:60px;
   padding-bottom:60px;
 }
+
+/*about*/
+.about{
+  background-image: url("/assets/img/home/about.png");
+  background-size: cover;
+  padding-top:100px;
+  padding-bottom:100px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
 /*New Collection*/
 .new-collection-bottom{
   display:flex;
