--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -164,83 +164,142 @@
         <p class="smt mt-2">AGURI designs reinvent our iconic AGURI collection with bold profiles and powerful details.</p>
       </div>
       <div class="col-9">
-        <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div id="newarrival" class="carousel slide carousel-fade" data-bs-ride="carousel">
+
           <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="4000">
+            <div class="carousel-item active" data-bs-interval="1300">
               <div class="row">
                 <div class="col-4">
-                  <div class="card-prd">
-                    <div class="img">
-                      <a href="#">
-                        <img src="./assets/img/home/new1.png">
-                      </a>
-                    </div>
-                    <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-                      Compare
-                    </div>
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="card-prd">
-                    <div class="img">
-                      <a href="#">
-                        <img src="./assets/img/home/new2.png">
-                      </a>
-                    </div>
-                    <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-                      Compare
+                  <div class="item-card-info">
+                    <div class="card-prd">
+                      <div class="img">
+                        <a href="#">
+                          <img src="./assets/img/home/new1.png">
+                        </a>
+                      </div>
+                      <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                        Quick view
+                      </div>
                     </div>
                   </div>
                 </div>
                 <div class="col-4">
-                  <div class="card-prd">
-                    <div class="img">
-                      <a href="#">
-                        <img src="./assets/img/home/new3.png">
-                      </a>
+                  <div class="item-card-info">
+                    <div class="card-prd">
+                      <div class="img">
+                        <a href="#">
+                          <img src="./assets/img/home/new2.png">
+                        </a>
+                      </div>
+                      <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                        Quick view
+                      </div>
                     </div>
-                    <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-                      Compare
+                  </div>
+                </div>
+                <div class="col-4">
+                  <div class="item-card-info">
+                    <div class="card-prd">
+                      <div class="img">
+                        <a href="#">
+                          <img src="./assets/img/home/new3.png">
+                        </a>
+                      </div>
+                      <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                        Quick view
+                      </div>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
-            <div class="carousel-item" data-bs-interval="4000">
+            <div class="carousel-item" data-bs-interval="1300">
               <div class="row">
                 <div class="col-4">
-                  <div class="card-prd">
-                    <div class="img">
-                      <a href="#">
-                        <img src="./assets/img/home/new4.png">
-                      </a>
-                    </div>
-                    <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-                      Compare
-                    </div>
-                  </div>
-                </div>
-                <div class="col-4">
-                  <div class="card-prd">
-                    <div class="img">
-                      <a href="#">
-                        <img src="./assets/img/home/new5.png">
-                      </a>
-                    </div>
-                    <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-                      Compare
+                  <div class="item-card-info">
+                    <div class="card-prd">
+                      <div class="img">
+                        <a href="#">
+                          <img src="./assets/img/home/new4.png">
+                        </a>
+                      </div>
+                      <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                        Quick view
+                      </div>
                     </div>
                   </div>
                 </div>
                 <div class="col-4">
-                  <div class="card-prd">
-                    <div class="img">
-                      <a href="#">
-                        <img src="./assets/img/home/new6.png">
-                      </a>
+                  <div class="item-card-info">
+                    <div class="card-prd">
+                      <div class="img">
+                        <a href="#">
+                          <img src="./assets/img/home/new5.png">
+                        </a>
+                      </div>
+                      <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                        Quick view
+                      </div>
                     </div>
-                    <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#compare">
-                      Compare
+                  </div>
+                </div>
+                <div class="col-4">
+                  <div class="item-card-info">
+                    <div class="card-prd">
+                      <div class="img">
+                        <a href="#">
+                          <img src="./assets/img/home/new6.png">
+                        </a>
+                      </div>
+                      <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                        Quick view
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="1300">
+              <div class="row">
+                <div class="col-4">
+                  <div class="item-card-info">
+                    <div class="card-prd">
+                      <div class="img">
+                        <a href="#">
+                          <img src="./assets/img/home/new7.png">
+                        </a>
+                      </div>
+                      <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                        Quick view
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-4">
+                  <div class="item-card-info">
+                    <div class="card-prd">
+                      <div class="img">
+                        <a href="#">
+                          <img src="./assets/img/home/new8.png">
+                        </a>
+                      </div>
+                      <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                        Quick view
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-4">
+                  <div class="item-card-info">
+                    <div class="card-prd">
+                      <div class="img">
+                        <a href="#">
+                          <img src="./assets/img/home/new9.png">
+                        </a>
+                      </div>
+                      <div class="compare card-prd-bt smt" data-bs-toggle="modal" type="button" data-bs-target="#quickview">
+                        Quick view
+                      </div>
                     </div>
                   </div>
                 </div>
@@ -385,9 +444,9 @@
 <!--BEST SELLERS-->
 <div class="also-like best-seller mbt-120">
   <h5 class="text-center mb-4">Best Sellers</h5>
-  <div id="bestseller" class="carousel slide carousel-dark" data-bs-ride="carousel">
+  <div id="bestseller" class="carousel slide carousel-dark slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-inner container">
-      <div class="carousel-item active" data-bs-interval="6000">
+      <div class="carousel-item active" data-bs-interval="3000">
         <div class="row">
           <div class="col-3">
             <div class="item-card-info">
@@ -463,7 +522,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item" data-bs-interval="5000">
+      <div class="carousel-item" data-bs-interval="3000">
         <div class="row">
           <div class="col-3">
             <div class="item-card-info">
@@ -539,7 +598,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item" data-bs-interval="5000">
+      <div class="carousel-item" data-bs-interval="3000">
         <div class="row">
           <div class="col-3">
             <div class="item-card-info">
@@ -686,7 +745,19 @@
     </div>
   </div>
 </div>
-
+<!--All about us-->
+<div class="about row mbt-120">
+  <div class="col-2"></div>
+  <div class="col-8 text-center">
+    <h4 class="mb-3">We Are More Than Jewels</h4>
+    <p class="smt mt-40 mb-5">
+      Aguri is a fine jewelry destination for memorable pieces designed and crafted in New York City.
+      Our carefully considered selection of rings, necklaces, earrings and bracelets honors mindful production and genuine materials.
+    </p>
+    <button class="btn btnlg btn-pri" routerLink="/about-us">More about us</button>
+  </div>
+  <div class="col-2"></div>
+</div>
 <!--New collection-->
 <div class="aguri-collection">
   <div class=" new-collection mbt-120 container">
@@ -782,13 +853,13 @@
             <button type="button" data-bs-target="#carouselshowroom" data-bs-slide-to="2" aria-label="Slide 3"></button>
           </div>
           <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="2000">
+            <div class="carousel-item active" data-bs-interval="1000">
               <img src="./assets/img/home/showroom1.png"/>
             </div>
-            <div class="carousel-item" data-bs-interval="2000">
+            <div class="carousel-item" data-bs-interval="1000">
               <img src="./assets/img/home/showroom2.png"/>
             </div>
-            <div class="carousel-item" data-bs-interval="2000">
+            <div class="carousel-item" data-bs-interval="1000">
               <img src="./assets/img/home/showroom3.png"/>
             </div>
           </div>
