--- a/src/app/pages/shop-all/shop-all.component.html
+++ b/src/app/pages/shop-all/shop-all.component.html
@@ -5,10 +5,14 @@
       <div class="ctg-left-top">
         <div class="d-flex">
           <div class="left-top">
-            <img src="./assets/img/shop-all/ctg1.png">
+            <a>
+              <img src="./assets/img/shop-all/ctg1.png">
+            </a>
           </div>
           <div class="center-top">
-            <img src="./assets/img/shop-all/ctg2.png">
+            <a>
+              <img src="./assets/img/shop-all/ctg2.png">
+            </a>
           </div>
         </div>
       </div>
@@ -18,21 +22,74 @@
             <img src="./assets/img/shop-all/ctg4.png">
           </div>
           <div class="center-btm">
-            <img src="./assets/img/shop-all/ctg5.png">
+            <a>
+              <img src="./assets/img/shop-all/ctg5.png">
+            </a>
           </div>
         </div>
       </div>
     </div>
     <div class="ctg-right col-4">
       <div class="right-top">
-        <img src="./assets/img/shop-all/ctg3.png">
+        <a>
+          <img src="./assets/img/shop-all/ctg3.png">
+        </a>
       </div>
       <div class="right-btm">
         <img src="./assets/img/shop-all/ctg6.png">
       </div>
     </div>
   </div>
-
+<!--SHOP ALL COLLECTION-->
+  <div class="container">
+    <div class="row collec-top">
+      <div class="col-7 collec-cart">
+        <div class="collec-img">
+          <a href="#">
+            <img src="./assets/img/shop-all/collec-1.png">
+          </a>
+        </div>
+        <div class="collec-name">
+          <h5>End-Off-Year Collection</h5>
+        </div>
+      </div>
+      <div class="col"></div>
+      <div class="col-4 right-top-collec collec-cart">
+        <div class="collec-img">
+          <a href="#">
+            <img src="./assets/img/shop-all/collec-2.png">
+          </a>
+        </div>
+        <div class="collec-name collec-name-2">
+          <h5>Spring Collection</h5>
+        </div>
+      </div>
+    </div>
+    <div class="row collec-btm">
+      <div class="col"></div>
+      <div class="col-4 collec-cart">
+        <div class="collec-img">
+          <a href="#">
+            <img src="./assets/img/shop-all/collec-3.png">
+          </a>
+        </div>
+        <div class="collec-name collec-name-3">
+          <h5>Aguri Minimalism</h5>
+        </div>
+      </div>
+      <div class="col"></div>
+      <div class="col-6 right-btm-collec collec-cart">
+        <div class="collec-img">
+          <a href="#">
+            <img src="./assets/img/shop-all/collec-4.png">
+          </a>
+        </div>
+        <div class="collec-name collec-name-4">
+          <h5>Aguri's Eternity Magic</h5>
+        </div>
+      </div>
+    </div>
+  </div>
   <!--COLLECTION HERE-->
 <!--  <div class="Ring-all cate-all">-->
 <!--    <h4 class="text-center">Rings</h4>-->
