--- a/src/app/pages/product-detail/product-detail.component.css
+++ b/src/app/pages/product-detail/product-detail.component.css
@@ -6,13 +6,14 @@
 .ask-advisor{
   margin-bottom:20px;
 }
+
 /*SELECT FORM*/
 /*Breadcrumb*/
 .breadcrumb{
-  padding: 16px 0px;
+  margin-top:20px;
 }
 .breadcrumb .breadcrumb-item a{
-  font-size:14px;
+  font-size:13px;
 }
 /*FIND SIZE*/
 .mx12{
