--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="headnav">
+<div [class]="'headnav '+(show?'nav--hidden':'')">
   <!--HEADER-->
   <header class="section top-page">
     <div class="header card-header border-0 container">
@@ -58,34 +58,34 @@
             <div class="row">
               <div class="col-3">
                 <ul>
-                  <li class="category"><a [routerLink]="['/category', 1]">Rings</a></li>
-                  <li><a [routerLink]="['/sub-category', 1]">Eternity</a></li>
-                  <li><a [routerLink]="['/sub-category', 2]">Cocktail</a></li>
-                  <li><a [routerLink]="['/sub-category', 3]">Wedding</a></li>
+                  <li class="category"><a routerLink="">Rings</a></li>
+                  <li><a routerLink="">Eternity</a></li>
+                  <li><a routerLink="">Cocktail</a></li>
+                  <li><a routerLink="">Wedding</a></li>
                 </ul>
               </div>
               <div class="col-3">
                 <ul>
-                  <li class="category"><a [routerLink]="['/category', 2]">Earrings</a></li>
-                  <li><a [routerLink]="['/sub-category', 4]">Stud</a></li>
-                  <li><a [routerLink]="['/sub-category', 5]">Drop & Dangle</a></li>
-                  <li><a [routerLink]="['/sub-category', 6]">Hoop</a></li>
+                  <li class="category"><a routerLink="">Earrings</a></li>
+                  <li><a routerLink="">Stud</a></li>
+                  <li><a routerLink="">Drop & Dangle</a></li>
+                  <li><a routerLink="">Hoop</a></li>
                 </ul>
               </div>
               <div class="col-3">
                 <ul>
-                  <li class="category"><a [routerLink]="['/category', 3]">Bracelets</a></li>
-                  <li><a [routerLink]="['/sub-category', 7]">Chain</a></li>
-                  <li><a [routerLink]="['/sub-category', 8]">Bangle</a></li>
-                  <li><a [routerLink]="['/sub-category', 9]">Tennis</a></li>
+                  <li class="category"><a routerLink="">Bracelets</a></li>
+                  <li><a routerLink="">Chain</a></li>
+                  <li><a routerLink="">Bangle</a></li>
+                  <li><a routerLink="">Tennis</a></li>
                 </ul>
               </div>
               <div class="col-3">
                 <ul>
-                  <li class="category"><a [routerLink]="['/category', 4]">Necklaces</a></li>
-                  <li><a [routerLink]="['/sub-category', 10]">Chain</a></li>
-                  <li><a [routerLink]="['/sub-category', 11]">Everyday</a></li>
-                  <li><a [routerLink]="['/sub-category', 12]">Layering</a></li>
+                  <li class="category"><a routerLink="">Necklaces</a></li>
+                  <li><a routerLink="">Chain</a></li>
+                  <li><a routerLink="">Everyday</a></li>
+                  <li><a routerLink="">Layering</a></li>
                 </ul>
               </div>
             </div>
