--- a/src/app/pages/category/category.component.css
+++ b/src/app/pages/category/category.component.css
@@ -66,6 +66,17 @@
   color: #000;
 }
 .category-bottom{
-  margin-bottom:80px;
-  margin-top:80px;
+  margin-bottom:60px;
+  margin-top:60px;
+}
+/*sticky category sid bar*/
+div.sticky{
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  padding-bottom:60px;
+  padding-top:40px;
+}
+.breadcrumb {
+  padding-left: 12.5px;
 }
